Add Nightscout timeline episodes
